--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,9 +24,9 @@ body {
 }
 
 /* for our flickering background */
-/* @keyframes backgroundRotate {
+@keyframes backgroundRotate {
   /* Initial fast flickering */
-  0%, 3% { background-image: url('/image1.svg'); }
+  /* 0%, 3% { background-image: url('/image1.svg'); }
   3.1%, 6% { background-image: url('/image2.svg'); }
   6.1%, 9% { background-image: url('/image3.svg'); }
   9.1%, 12% { background-image: url('/image4.svg'); }
@@ -39,7 +39,7 @@ body {
   30.1%, 33% { background-image: url('/image11.svg'); }
   33.1%, 36% { background-image: url('/image12.svg'); }
   36.1%, 39% { background-image: url('/image13.svg'); }
-  39.1%, 42% { background-image: url('/image14.svg'); }
+  39.1%, 42% { background-image: url('/image14.svg'); } */
 
   /* Gradual slowdown */
   42.1%, 45% { background-image: url('/image1.svg'); }
@@ -54,7 +54,7 @@ body {
   81.1%, 87% { background-image: url('/image10.svg'); }
   87.1%, 93% { background-image: url('/image11.svg'); }
   93.1%, 100% { background-image: url('/image12.svg'); }
-} */
+}
 
 .animate-backgroundRotate {
   animation: backgroundRotate 3.9s cubic-bezier(0.1, 0.1, 0.2, 1) forwards;
